# rc-tauri-stream

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  util.rs
src/components/: footer.tsx  logo.tsx  results-table.tsx  scanner.tsx  trashbin.tsx
src/lib/: format.ts  get-dir-name.ts  store.ts  tauri-commands.ts
