[package]
name = "nmw"
version = "0.0.0"
description = "A Tauri App"
authors = ["@AtilaFassina"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["fs"] }
thiserror = "1.0.47"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["typescript"] }
regex = "1.9.5"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.20"
globwalk = "0.8.1"
futures = "0.3.28"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
